--- a/App/App/App/CreateUser.xaml
+++ b/App/App/App/CreateUser.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App.CreateUser">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout   x:Name="stackLayout" >
             <Entry x:Name="userName" Placeholder="Enter username"/>
             <Entry x:Name="password" Placeholder="Enter Password"/>
             <CollectionView x:Name="uList">
