--- a/App/App/App/MainPage.xaml
+++ b/App/App/App/MainPage.xaml
@@ -1,19 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App.MainPage" NavigationPage.HasBackButton="False">
+             x:Class="App.MainPage" NavigationPage.HasBackButton="False" BackgroundColor="AntiqueWhite" NavigationPage.HasNavigationBar="False" >
     <ContentPage.Content>
+        
         <StackLayout x:Name="stackLayout1">
-            <Label Text="Welcome to ......."></Label>
-            <Label Text="Log In"></Label>
-            <Label Text="Please enter your username"></Label>
-            <Entry x:Name="username" Placeholder="Enter Username"/>
-            <Label Text="Please enter your password"></Label>
-            <Entry x:Name="userpassword" Placeholder="Enter Password"/>
+            <StackLayout Padding="20">
+                <Frame CornerRadius="40" IsClippedToBounds="True" >
+                   <Image Source="luxenotes.png" HorizontalOptions="Center" 
+        VerticalOptions="Center" />  
+                </Frame>
+            </StackLayout>
 
-            <Button Text="Login"  Clicked="Button_Login"/>
-            <Label Text="Not got an account?"></Label>
-            <Button Text="Create an account" Clicked="Button_Create"      />
+            <Label Text="Log In" FontFamily="DK" HorizontalOptions="Center" 
+        VerticalOptions="Center" FontSize="50" TextColor="Black"></Label>
+            <Label Text="Please sign in to continue." VerticalOptions="Center" FontSize="27" HorizontalOptions="Start" Padding="10" FontFamily="AT" TextColor="Black"></Label>
+            <Entry x:Name="username" Placeholder="Username"  VerticalOptions="Center" TextColor="Black" HorizontalOptions="Center" WidthRequest="270"     />
+            <Entry x:Name="userpassword" Placeholder="Password"  VerticalOptions="Center" TextColor="Black" HorizontalOptions="Center" WidthRequest="270"/>
+
+            <Button Text="Login" BackgroundColor="MediumPurple" Clicked="Button_Login"  TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="AT" CornerRadius="40"  HorizontalOptions="Center" WidthRequest="270"  HeightRequest="38"/>
+           
+                       <Label   Text="Not got an account?" FontFamily="AT" Padding="20" TextColor="Black" FontSize="20" VerticalOptions="Fill"  ></Label>
+            <Button Text="Create an account"  BackgroundColor="MediumPurple" FontAttributes="Italic" TextColor="White" Clicked="Button_Create" FontSize="17" FontFamily="AT" CornerRadius="40"  HorizontalOptions="Center" WidthRequest="270"  HeightRequest="35"     />
+           
+     
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
