--- a/App/App/App/UserNotes.xaml
+++ b/App/App/App/UserNotes.xaml
@@ -17,11 +17,11 @@
                     <Button Grid.Column="1" BackgroundColor="MediumPurple" FontAttributes="Italic" TextColor="White" FontSize="23" FontFamily="AT" CornerRadius="40"   WidthRequest="150"  HeightRequest="150" Text="Logout" Clicked="Button_LogOut" HorizontalOptions="End" VerticalOptions="Center" />
                 </Grid>
             </StackLayout>
-            <StackLayout >
-                
-          
-            <Entry x:Name="Context" Placeholder="What would you like to add?"/>
-            <Label x:Name="loc" Text="" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center" TextColor="Black" />
+            <StackLayout BackgroundColor="AntiqueWhite">
+
+
+                <Entry x:Name="Context" Placeholder="What would you like to add?" FontAttributes="Bold" FontSize="33"   FontFamily="AT"/>
+            <Label x:Name="loc" Text="" HorizontalOptions="Center" FontAttributes="Bold" VerticalOptions="Center" HorizontalTextAlignment="Center" TextColor="Black" />
                 <Grid BackgroundColor="AntiqueWhite" Padding="10" HeightRequest="120" VerticalOptions="Center">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -46,14 +46,14 @@
                                     </SwipeItem>
                                 </SwipeView.RightItems>
 
-                                <StackLayout >
+                                <StackLayout BackgroundColor="AntiqueWhite">
 
 
-                                    <Label Text="{Binding UserNotes}" TextColor="Black" FontFamily="PK" FontAttributes="Bold" FontSize="33"  HorizontalOptions="Center"/>
-                                    <Label  x:Name="loclabel" Text= "{Binding Location}" TextColor="Black"  HorizontalOptions="Center" />
+                                <Label Text="{Binding UserNotes}" TextColor="Black" FontFamily="AT" FontAttributes="Bold" FontSize="33"  HorizontalOptions="Center"/>
+                                    <Label  x:Name="loclabel" Text= "{Binding Location}" FontAttributes="Bold" TextColor="Black"  HorizontalOptions="Center" />
                                     <Button  x:Name="mapbtnnn" Text="Open in Maps" FontFamily="PF"  Clicked="Button_Clicked_Map" BackgroundColor="PowderBlue"  CornerRadius="40"   HorizontalOptions="Center"></Button>
-                                    <Image x:Name="Image" Source="{Binding Pic}" HeightRequest="40"  ></Image>
-                                    <Label Text="END OF NOTE" TextColor="Black"  HorizontalOptions="Center"/>
+                                    <Image x:Name="Image" Source="{Binding Pic}" HeightRequest="90"  ></Image>
+                                    <Label Text="*END OF NOTE*" FontAttributes="Bold" TextColor="Black"  HorizontalOptions="Center"/>
 
 
                                 </StackLayout>
